k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: b-svc
  namespace: apps
spec:
  selector:
    appID: b-svc
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
